--- a/_config.yml
+++ b/_config.yml
@@ -308,8 +308,8 @@ jekyll-archives:
 
 # display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
 # display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
-display_tags: ["Academic"] # these tags will be displayed on the front page of your blog
-display_categories: ["Life"] # these categories will be displayed on the front page of your blog
+display_tags: ["Academic", "Life"] # these tags will be displayed on the front page of your blog
+# display_categories: ["Life"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
