--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,11 @@ last_name: hao
 email: yuanhaochen999@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+# footer_text: >
+  # Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/BlueStar2333/al-folio">al-folio</a> theme.
+  # Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  # Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 footer_text: >
-# Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/BlueStar2333/al-folio">al-folio</a> theme.
-# Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-# Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
   Last updated:August 5, 2024.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
